prevent tab buttons breaking on smaller breakpoints

--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -100,7 +100,6 @@
     }
 
     .p-tabs-segmented__list {
-      align-items: flex-start;
       display: flex;
     }
 
@@ -109,7 +108,6 @@
 
       border-radius: 0;
       margin-right: 0;
-      overflow: auto;
 
       &:not(:first-child) {
         border-left: 0;
